tests/NormalTests/paczka1/fuzzy1/78471654.err
Error in line 3: JnWC7xjAS A219 40,0
Error in line 11: rL3sNCNvj A133 50,4
Error in line 12: BO3bU9i A133 85,8
Error in line 13: S807 S807 246,9
Error in line 27: 5A0iQ A133 90,2
Error in line 28: S807 A698 59,1
